# crossline

./: .clang-format  .clangd  CMakeLists.txt  README.md
core/: main.cpp
core/user-interface/: CMakeLists.txt
core/user-interface/modules/: crossline_ui.cppm  crossline_ui_context.cppm  crossline_ui_reactive.cppm
docs/: ARCHITECTURE.md  GETTING_STARTED.md  PROJECT_INFO.md  TESTING.md
tests/: CMakeLists.txt  light_test.cppm  main.cpp  results.html  results.json
tests/crossline_ui/: crossline_ui_reactive.cppm  crossline_ui_reactive_tests.cppm
tools/: run_tests.bat  test_results_to_html.py
